--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
     
     <link rel="stylesheet" href="../static/style.css">
     <link rel="stylesheet" href="../static/home.css">
+    <link rel="stylesheet" href="../static/forms.css">
+    <link rel="stylesheet" href="../static/list.css">
 </head>
 {% block body %}
     <nav class="nav-bar">
