--- a/templates/routes/show-route.html
+++ b/templates/routes/show-route.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     <div>
+        <iframe allowFullScreen="allowFullScreen" src="https://www.youtube.com/embed/jNQXAC9IVRw?ecver=1&amp;autoplay=1&amp;iv_load_policy=3&amp;yt:stretch=16:9&amp;autohide=1&amp;color=red&amp;width=560&amp;width=560" width="560" height="315" allowtransparency="true" frameborder="0"><div><a id="BRejEUm2" href="https://broadband.deals/network-reviews/bt">BT Broadband review here says its not great</a></div><div><a id="BRejEUm2" href="https://broadband.deals/no-upfront-costs-broadband-deals">Switch today with no upfront cost</a></div><script>function execute_YTvideo(){return youtube.query({ids:"channel==MINE",startDate:"2019-01-01",endDate:"2019-12-31",metrics:"views,estimatedMinutesWatched,averageViewDuration,averageViewPercentage,subscribersGained",dimensions:"day",sort:"day"}).then(function(e){},function(e){console.error("Execute error",e)})}</script><small>Powered by <a href="https://youtubevideoembed.com/ ">Embed YouTube Video</a></small></iframe>
         <p>I am {{ route.name }} and I exist!</p>
         <a href="/add-comment/{{ route.id }}">Add comment</a>
     </div>
