--- a/templates/home.html
+++ b/templates/home.html
@@ -13,36 +13,62 @@
         <div class="following-posts-container">
             {% for following in followings %}
                 {% for user in users %}
-                    {% if user.id == following.following_user_id %}
+                    {% if user.id == following.following_user_id or user.id == g.user.id %}
                     <div class="posts-container">
                         {% for post in posts %}
                             {% if user.id == post.user_id %}
-                            <div class="post-wrapper">
+                            <div class="post-container">
                                 <div class="user-profile-image">
-                                    <img src="{{ user.image_url }}" alt="profile picture for {{ user.username }}"/>
+                                    <img class="user-image" src="{{ user.image_url }}" alt="profile picture for {{ user.username }}"/>
                                 </div>
-                                <div class="user-username">
-                                    <a href="/user/{{ user.id }}">{{ user.username }}</a>
-                                </div>
-                                <div class="post-contents">
+                                <div class="post-title">
                                     <div class="post-caption-wrapper"><h1>{{ post.caption }}</h1></div>
-                                    <div class="post-name-wrapper"><h1>{{ user.name }} says...</h1></div>
-                                    <div class="post-description-wrapper"><p>{{ post.description }}</p></div>
-                                    <div class="post-image-wrapper"><img src="{{ post.image_url }}" alt="image for {{ post.caption }}"/></div>
-                                    <div class="post-video-wrapper"><p>video url: {{ post.video_url }}</p></div>
                                 </div>
-                                <div class="post-comments-container">
-                                    {% for comment in comments %}
-                                        {% for commenter in users %}
-                                            {% if post.id == comment.post_id and commenter.id == comment.user_id %}
-                                                <div class="post-comment-wrapper">
-                                                    <p class="comment">{{ commenter.username }} says: {{ comment.description }}</p>
-                                                </div>
+                                <div class="post-wrapper">
+                                    <div class="post-contents">
+                                        <a href="/user/{{ user.id }}">@{{ user.username }} </a>
+                                        <div class="post-description-wrapper"><p>{{ post.description }}</p></div>
+                                        {% if post.image_url %}
+                                            <div class="post-image-wrapper"><img src="{{ post.image_url }}" alt="image for {{ post.caption }}"/></div>
+                                        {% endif %}
+                                        {% if post.video_url %}
+                                            <div class="post-video-wrapper"><p>video url: {{ post.video_url }}</p></div>
+                                        {% endif %}
+                                        <div class="post-actions">
+                                            {% if post.total_likes > 0 %}
+                                                <a class="post-actions-links">{{ post.total_likes }} user{% if post.total_likes > 1 %}s{% endif%} like{% if post.total_likes == 1 %}s{% endif%} this</a>
                                             {% endif %}
-                                        {% endfor %}
-                                    {% endfor %}
+                                            {% if likes|length == 0 %}
+                                                <a class="post-actions-links" href="/like-post/{{ post.id }}">Like this!</a>
+                                            {% endif %}
+                                            {% for like in likes %}
+                                                {% if like.post_id == post.id and like.user_id == g.user.id %}
+                                                    <a class="post-actions-links" href="/unlike-post/{{ post.id }}">Unlike</a>
+                                                {% else %}
+                                                    <a class="post-actions-links" href="/like-post/{{ post.id }}">Like this!</a>
+                                                {% endif %}
+                                            {% endfor %}
+                                            <a class="post-actions-links" href="/add-post-comment/{{ post.id }}">Leave a comment!</a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
+                                {% if comments|length > 0 %}
+                                    <div class="post-comments-container">
+                                        {% for comment in comments %}
+                                            {% for commenter in users %}
+                                                {% if post.id == comment.post_id and commenter.id == comment.user_id %}
+                                                    <div class="post-comment-wrapper">
+                                                        <div class="commenter-image-wrapper">
+                                                            <img class="commenter-image" src="{{ commenter.image_url }}" alt="picture for {{ commenter.username }}"/>
+                                                        </div>
+                                                        <p class="comment"><a href="/user/{{ commenter.id }}">@{{ commenter.username }}</a> - {{ comment.description }}</p>
+                                                    </div>
+                                                {% endif %}
+                                            {% endfor %}
+                                        {% endfor %}
+                                    </div>
+                                {% endif %}
                             {% endif %}
                         {% endfor %}
                     </div>
